# AZ

./: .gitignore  .gitmodules  CMakeLists.txt  generate_test_cases.py  pattern_matching_brute_force.cpp  pyproject.toml  test_compare.sh
pattern_matching/: CMakeLists.txt  common.h  main.cpp  naive.h  naive.py  pattern_generator.py
pattern_matching_brute_force/: CMakeLists.txt
pattern_matching_bruteforce/: CMakeLists.txt
pattern_matching_v2/: CMakeLists.txt  generate_test.cpp  generate_test.py  main.cpp
test_case_generator/: CMakeLists.txt  main.cpp
utility/: kpm.py  pattern_generator.py  test_kmp.py  test_naive.py
